\name{NEWS}
\title{News for Package \pkg{Gifi}}
\encoding{UTF-8}

\section{Version 0.1-0}{
 \itemize{
    \item \code{Princals wrapper incl. S3 print added}
    \item \code{Bug in makeNumeric fixed}
  }
}

\section{Version 0.1-1}{
 \itemize{
    \item \code{Allow for different object score and quantification normalizations}
    \item \code{Knot utility functions functions and makeNumeric exported}
    \item \code{Princals S3 summary added}
    \item \code{Allow for different ties and missing specifications}
    \item \code{knotsD as default in princals}
    \item \code{Knot functions now work for single variables as well}
  }
}

\section{Version 0.1-2}{
 \itemize{
    \item \code{ylim scree plot starts at 0}
    \item \code{Help file for plot.princals added}
    \item \code{Aspect ratio for 2D plots set to 1}
    \item \code{Color argument for lines in transplot and screeplot}
  }
}

\section{Version 0.2-0}{
 \itemize{
    \item \code{homals wrapper added}
    \item \code{plot, summary, print S3 for homals added}
    \item \code{Some cosmetics on the transformation plot}
    \item \code{Attribute assigned to knot functions}
  }
}