@@ -1,6 +1,6 @@
 useDynLib("Gifi")
 import("stats", "graphics", "colorspace")
-export(princals, homals)
+export(princals, homals, morals)
 export(knotsQ, knotsR, knotsD, knotsE, makeNumeric)
 
 S3method(print, gifi)
@@ -8,3 +8,5 @@ S3method(summary, princals)
 S3method(plot, princals)
 S3method(summary, homals)
 S3method(plot, homals)
+S3method(print, morals)
+S3method(plot, morals)
